Fix bullet spacing on FAQ

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -807,7 +807,7 @@ p.faq-search-text {
 }
 
 .usa-prose > ul {
-	margin-left: 20px;
+	margin-left: 10px;
 }
 
 
